--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.9.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^3.1.1"
   }
 }
