--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-google-places-map": "^1.3.3",
-    "bootstrap-rating": "^1.4.0",
     "angular-bootstrap": "^2.5.0",
-    "angular-animate": "^1.6.6",
-    "angular-loading-bar": "^0.9.0"
+    "angular": "^1.6.6",
+    "jquery": "^3.2.1",
+    "ngmap": "^1.18.4"
   }
 }
