--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "zenefits_project",
+  "name": "google_places_api",
   "authors": [
     "Mazin Zakaria <mazinzakaria1@gmail.com>"
   ],
