--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zenefits_project",
+  "name": "google_places_api",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
